<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="32dp"
    tools:context=".misc.ManageItemsFragment">

    <Button
        android:id="@+id/buttonAddItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_item"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/buttonDeleteItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_item"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back" />

</LinearLayout>